# SlowFast

./: INSTALL.md  pyproject.toml
configs/custom/: SlowFastConfig.yaml
slowfast/datasets/: __init__.py  custom_dataset.py  decoder.py  kinetics.py  loader.py  multigrid_helper.py  pbrdata.py
